Avances en vacunas

--- a/app/views/vacunas/listar.html.erb
+++ b/app/views/vacunas/listar.html.erb
@@ -22,6 +22,7 @@
                     <th>Nmero de Frasco</th>
                     <th>Fecha de Retiro</th>
                     <th>Fecha de Solicitud</th>
+                    <th>Estado</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -30,6 +31,7 @@
                       <td><%= frasco[:numero] %></td>
                       <td><%= frasco[:fecha_retiro] %></td>
                       <td><%= frasco[:fecha_solicitud] %></td>
+                      <td><%= frasco[:estado] %></td>
                     </tr>
                   <% end %>
                 </tbody>
