--- a/app/views/vacunas/solicitar.html.erb
+++ b/app/views/vacunas/solicitar.html.erb
@@ -2,6 +2,13 @@
   <div class="container-fluid">
     <%= render 'shared/menu_paciente', tituloVentana: 'Listado de Frascos' %>
 
+    <% if flash[:notice].present? %>
+      <div class="alert alert-success fade in">
+        <a class="close" data-dismiss="alert" href="#">×</a>
+        <strong><%= flash[:notice] %></strong>
+      </div>
+    <% end %>
+
     <div class="row" style="padding-top:25px">
       <div class="col-lg-6 col-lg-offset-3">
         <div class="panel-group">
@@ -10,6 +17,43 @@
               <h4 class="panel-title">Solicitud de vacunas</h4>
             </div>
             <div class="panel-body">
+              <%= form_for @pago, url: vacunas_crear_solicitud_path do |f| %>
+                <div class="form-group">
+                  <%= f.label :pagar %>
+                  <%= f.check_box :pagar, checked: false %>
+                </div>
+
+                <div id="campos">
+                  <div class="form-group">
+                    <%= f.label :fecha_pago %>
+                    <%= f.date_select :fecha_pago, {}, class: 'form-control' %>
+                  </div>
+
+                  <div class="form-group">
+                    <%= f.label :tipo_pago %>
+                    <%= f.select :tipo_pago, [ ['Deposito', 0], ['Transferencia', 1] ], {}, class: 'form-control' %>
+                  </div>
+
+                  <div class="form-group">
+                    <%= f.label :numero %>
+                    <%= f.text_field :numero, class: 'form-control' %>
+                  </div>
+
+                  <div class="form-group">
+                    <%= f.label :banco %>
+                    <%= f.text_field :banco, class: 'form-control' %>
+                  </div>
+
+                  <div class="form-group">
+                    <%= f.label :monto %>
+                    <%= f.number_field :monto, step: 0.01, min: 0.01, class: 'form-control' %>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <%= f.submit 'Solicitar Frasco', class: 'btn btn-primary' %>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
@@ -17,3 +61,26 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $('#campos').hide();
+  $('#pago_banco').parent().hide();
+  $('#pago_tipo_pago').change(function(e) {
+    var value = $(e.target).prop('selectedIndex');
+    if (value == 1) {
+      $('#pago_banco').parent().fadeIn();
+    }
+    else {
+      $('#pago_banco').parent().fadeOut();
+    }
+  });
+
+  $('#pago_pagar').change(function(e) {
+    if ($('#pago_pagar').is(':checked')) {
+      $('#campos').fadeIn();
+    }
+    else {
+      $('#campos').fadeOut();
+    }
+  });
+</script>
