--- a/app/views/shared/_menu_tratamiento.html.erb
+++ b/app/views/shared/_menu_tratamiento.html.erb
@@ -30,7 +30,7 @@
       </li>
 
       <li>      
-      <%=link_to "Registro de pruebas alergicas", buscar_administrator_pacientes_path %>
+      <%=link_to "Registro/Modificación de pruebas alérgicas", buscarPruebas_administrator_pacientes_path %>
     	</li>
     	
       <li>
