--- a/app/views/shared/_menu_paciente.html.erb
+++ b/app/views/shared/_menu_paciente.html.erb
@@ -32,10 +32,13 @@
 </li>
 
 <li class="dropdown">
-     <%=link_to ejemplo1_path do %>
-        <i class="fa fa-gratipay"></i>&nbsp;&nbsp;Opción 2</a>
-    <%end%>
-   
+     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-magic"></i>Administrar Frascos <b class="caret"></b></a>
+  <ul class="dropdown-menu alert-dropdown">
+    <li><%=link_to "Solicitar Frasco", vacunas_solicitar_path %></li>
+    <li class="divider"></li>
+    <li><%=link_to "Ver Frascos", vacunas_listar_path %></li>
+    <li class="divider"></li>
+  </ul>
 </li> 
 
 <li class="dropdown">
