--- a/app/views/shared/_menu_paciente.html.erb
+++ b/app/views/shared/_menu_paciente.html.erb
@@ -16,9 +16,9 @@
  </li> 
 
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-magic"></i>Vacunas <b class="caret"></b></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-magic"></i>Opción 1<b class="caret"></b></a>
   <ul class="dropdown-menu alert-dropdown">
-     <li><%=link_to "Historial de Frascos", show_frascos_paciente_registration_path(current_usuario)  %></li>
+     <li><%=link_to "Sub opción 1", ejemplo1_path %></li>
      <li class="divider"></li>
       <li><%=link_to "Sub opción 1", ejemplo1_path  %></li>
      <li class="divider"></li>
