Arreglo de estructura del email, proyecto esta completo

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-  	<div class="navbar-header"> sdfsdssdf              
+  	<div class="navbar-header"> Alerasin              
            <%=image_tag "logo.png", class: "logo"%>
            <a class="navbar-brand" href="index.html"></a>
         </div>
