Modificación final en pruebas alérgicas

--- a/app/views/devise/registrations/editPaciente.html.erb
+++ b/app/views/devise/registrations/editPaciente.html.erb
@@ -160,13 +160,13 @@ Datos de pruebas Alérgicas
     </div>
     <label class="control-label col-md-3">CUC:</label>
       <div class="col-md-1">             
-      <%= f.input :cuc, label: false, as: :string, :input_html => {value: @paciente.ava}%> 
+      <%= f.input :cuc, label: false, as: :string, :input_html => {value: @paciente.cuc}%> 
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-md-2">HONG:</label>
       <div class="col-md-1">             
-      <%= f.input :hong, label: false, as: :string, :input_html => {value: @paciente.ava}%>     
+      <%= f.input :hong, label: false, as: :string, :input_html => {value: @paciente.hong}%>     
     </div>
     <label class="control-label col-md-3">BERM:</label>
       <div class="col-md-1">             
