--- a/app/views/shared/_menu_paciente.html.erb
+++ b/app/views/shared/_menu_paciente.html.erb
@@ -36,7 +36,7 @@
   <ul class="dropdown-menu alert-dropdown">
     <li><%=link_to "Solicitar Frasco", vacunas_solicitar_path %></li>
     <li class="divider"></li>
-    <li><%=link_to "Ver Frascos", vacunas_listar_path %></li>
+    <li><%=link_to "Ver Frascos", show_frascos_paciente_registration_path(current_usuario) %></li>
     <li class="divider"></li>
   </ul>
 </li> 
