--- a/app/views/devise/registrations/showFrascosPaciente.html.erb
+++ b/app/views/devise/registrations/showFrascosPaciente.html.erb
@@ -11,7 +11,7 @@
 
 
 <%if @paciente.blank?%>
-      <%= render 'shared/dosFilasVistasPaciente', tituloVentana: "Histórico de Frascos solicitados y entregados" %>
+      <%= render 'shared/dosFilasVistas', tituloVentana: "Histórico de Frascos solicitados y entregados" %>
 
         <div class="row">
           <div class="col-lg-3"></div>
@@ -35,7 +35,7 @@
                     <td><strong>Fecha de Solicitud:</strong></td>
                     <td><%= Date.strptime(fechas[:fecha_solicitud],"%d/%m/%Y")%></td>  
                     <td><strong>Fecha de Retiro:</strong></td>
-                    <td><%= existe_fecha(Date.parse (fechas[:fecha_retiro]))%></td>                    
+                    <td><%= existe_fecha(Date.parse (fechas[:fecha_retiro]))%></td>                  
                     </tr>
                   <%end%>                   
                   </tr>
@@ -63,7 +63,7 @@
 
 <div id="page-wrapper">
       <div class="container-fluid">
-      <%= render 'shared/dosFilasVistasPaciente', tituloVentana: "Histórico de Frascos solicitados y entregados" %>
+      <%= render 'shared/dosFilasVistas', tituloVentana: "Histórico de Frascos solicitados y entregados" %>
         <div class="row">
           <div class="col-sm-2"></div>
           <div class="col-sm-8">
@@ -79,14 +79,14 @@
                   <li class="list-group-item">
                   <table class="table table-condensed">
                   <tr>
-                  <% @hash_frascos.each do |frasco,fechas| %>
+                  <% @hash_frascos.each do |frasco| %>
                      <tr>
                     <td><strong>Frasco:</strong></td>
-                    <td><%=frasco%></td>
+                    <td><%=frasco%></td> 
                     <td><strong>Fecha de Solicitud:</strong></td>
-                    <td><%=fechas[:fecha_solicitud]%></td>  
+                    <td><%= @hash_original[frasco][:fecha_solicitud]%></td>  
                     <td><strong>Fecha de Retiro:</strong></td>
-                    <td><%=fechas[:fecha_retiro]%></td>                    
+                    <td><%= @hash_original[frasco][:fecha_solicitud]%></td>  
                     </tr>
                   <%end%>                   
                   </tr>
@@ -99,14 +99,27 @@
          <div class="col-sm-3"></div>  
         </div>
        <!-- /.row -->
-
         <div class="row">
            <div class="col-sm-3"></div>
           <div class="col-sm-6">
-            <%=link_to 'Regresar', paciente_path%>
+            <%=link_to 'Regresar', buscarFrasco_administrator_pacientes_path%>
           </div>
           <div class="col-sm-3"></div>
         </div><!-- /.row -->
+
+        <!--el siguiente código coloca la páginación sin estilos -->
+<div id="page_links">
+    <%#= paginate @pacientes %>
+</div>
+
+<!-- la siguiente instrucción carga la páginación con bootstrap-->
+
+<div style="text-align:center">
+<%= will_paginate @hash_frascos, renderer: BootstrapPagination::Rails %>
+</div>
+<!-- o también
+
+<%#= js_will_paginate @pacientes %>
 
 <%end%>
 
